--- a/assets/less/social/basic/body.less
+++ b/assets/less/social/basic/body.less
@@ -1,4 +1,4 @@
-html, body {height: 100%; width: 100%; overflow-y: scroll;}
+html, body {height: 100%; width: 100%; overflow: hidden;}
 body {
 	background-color: @white;
 	.box-fix;
