--- a/assets/less/social/basic/classes/box.less
+++ b/assets/less/social/basic/classes/box.less
@@ -16,8 +16,9 @@
 		}
 	}
 	section {
-		background-color: @white;
+		background-color: @grayLighter;
 		padding: 5px 0;
 		.border-radiuses(0, 5px, 5px, 0);
+		.clear-fix;
 	}
 }
